Added in pd-heroesHalf-7

--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -232,6 +232,68 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-7</p>
             </div>
         </section>
+        <section class="pd-heroesHalf-7">
+            <div class="pd-heroesHalf-7-img-outer">
+                <script>
+        function imageLoadedListener7(e) {
+            const heroHalf7 = document.querySelector(".pd-heroesHalf-7-img");
+            heroHalf7.classList.add("pd-heroesHalf-7-image-loaded");
+        }
+    </script>
+                <picture>
+                    <source srcset="/images/uploads/lincoln-court-living-room-dressed_result.webp 1800w, 
+                                /images/uploads/lincoln-court-living-room-dressed_mobile_result.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/lincoln-court-living-room-dressed_result.jpg 1800w,
+                            /images/uploads/lincoln-court-living-room-dressed_result_mobile.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/lincoln-court-living-room-dressed_result.jpg" onload="imageLoadedListener7()" loading="lazy" alt="image of apartment for rent in fairview oregon" class="pd-heroesHalf-7-img pd-heroesHalf-7-image-loaded">
+                </picture>
+            </div>
+            <div class="container-xxl position-relative">
+                <div class="row">
+                    <div class="col pb-5 pt-5">
+                        <div class="pd-heroesHalf-7-content-outer">
+                            <div class="pd-heroesHalf-7-notification-outer">
+                                <div class="d-lg-none pd-heroesHalf-7-mobile-outer">
+                                    <p><strong>First month FREE!</strong> - <a href="#">View Specials</a></p>
+                                </div>
+                                <div class="d-lg-flex d-none pb-3 pb-lg-0 pd-heroesHalf-7-notification-header-body-outer">
+                                    <header class="pb-2 pb-lg-0 pd-heroesHalf-7-notification-header pe-2">
+                                        <p>Lease Special!</p>
+                                    </header>
+                                    <div class="pd-heroesHalf-7-notification-body pe-lg-2 ps-0 ps-lg-2">
+                                        <div>
+                                            <p><strong>Tour today</strong> - apply with 24 hours and pay no application fee. Get your first full month free!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <footer class="d-lg-flex d-none pd-heroesHalf-7-notification-footer">
+                                    <a href="#" name="anchor" class="pd-btn"><span><img src="images/design-assets/redeem_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="lease special icon" width="24" height="24" loading="lazy"></span>View Special</a>
+                                </footer>
+                            </div>
+                            <div class="pd-heroesHalf-7-content-inner">
+                                <header>
+                                    <div class="pd-intro-heading-sm"><span><img src="images/design-assets/arrow_right_alt_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="arrow icon" width="18" height="18" loading="lazy"></span>
+                                        <h1 class="pd-intro-heading-sm">Available Apartments to Rent Fairview, Oregon</h1>
+                                    </div>
+                                    <p class="pd-headline">Check Availability</p>
+                                </header>
+                                <div class="d-none d-sm-block pd-subHeadline">
+                                    <p>Donec accumsan fringilla purus sit amet semper. Praesent iaculis nibh tortor, rhoncus efficitur ipsum viverra ut.</p>
+                                </div>
+                                <footer><a href="#" class="pd-btn"><span><img src="images/design-assets/search_check_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="24" height="24" loading="lazy"></span>View Available</a>
+                                    <a href="#" class="pd-btn"><span><img src="images/design-assets/calendar_clock_24dp_DE541E_FILL0_wght300_GRAD0_opsz24.svg" alt="schedule a tour icon" width="24" height="24" loading="lazy"></span>Schedule a Tour</a>
+                                </footer>
+                            </div>
+                            <div class="pd-heroesHalf-7-address-phone-card-outer pd-heroesHalf-7-d"></div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-8</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
