Added in new logo strip

--- a/_factory_logo_strips.html
+++ b/_factory_logo_strips.html
@@ -76,6 +76,89 @@
                 </div>
             </div>
         </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-logo-strip-2</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-logo-strip-2 pt-5">
+            <div class="container">
+                <div class="pb-lg-4 row">
+                    <div class="col-12 col-lg-9">
+                        <header>
+                            <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#c5247f">
+                                    <path d="m352.46-85.39-71.38-120.3-135.54-29.7 13.23-139.53L66.93-480l91.84-105.08-13.23-139.53 135.54-29.7 71.38-120.3L480-820.46l127.54-54.15 71.38 120.3 135.54 29.7-13.23 139.53L893.07-480l-91.84 105.08 13.23 139.53-135.54 29.7-71.38 120.3L480-139.54 352.46-85.39ZM378-162l102-43.23L583.23-162 640-258l110-25.23L740-396l74-84-74-85.23L750-678l-110-24-58-96-102 43.23L376.77-798 320-702l-110 24 10 112.77L146-480l74 84-10 114 110 24 58 96Zm102-318Zm-42 128.15L650.15-564 608-607.38l-170 170-86-84.77L309.85-480 438-351.85Z"/>
+                                </svg>
+                                <h2 class="pd-intro- pd-intro-heading-sm">Trusted By</h2>
+                            </div>
+                            <p class="pd-headline">Recognised by WHO. Trusted by Innovators</p>
+                        </header>
+                        <div>
+                            <!-- <p class="pd-subHeadline">The OpenFlexure Microscope is an open-source, 3D printed, high-performance robotic microscope that is being built and used across the world by our global community.</p> -->
+                        </div>                         
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="pd-logo-strip-2-grid-outer">
+                            <article class="pd-logo-strip-2-card-lg">
+                                <div class="pd-logo-strip-2-card-lg-col-left">
+                                    <header>
+                                        <h3>OpenFlex Microscope Recommended in WHO Compendium&nbsp;</h3>
+                                    </header>
+                                    <div>
+                                        <p class=" pb-2">Donec accumsan fringilla purus sit amet semper.&nbsp;Praesent iaculis nibh tortor, rhoncus efficitur ipsum viverra ut.</p>
+                                    </div>
+                                    <footer class=""><a href="#" class="pd-btn pd-btn-default-width pd-btn-light"><span class="pd-icon"><img alt="search icon" width="40" height="40" loading="lazy" src="images/design-assets/download_24dp_C5247F_FILL0_wght300_GRAD0_opsz24.svg"></span><span class="pd-icon pd-icon-rollover"><img src="images/design-assets/download_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span>View</a>
+                                    </footer>
+                                </div>
+                                <div class="pd-logo-strip-2-card-lg-col-right">
+                                    <img src="images/design-assets/logo_who.svg" alt="WHO logo" loading="lazy" class="mb-4">
+                                    <a href="#" name="anchor"><picture>
+                                            <source srcset="images/uploads/who_compendium_result.webp" type="image/webp">
+                                            <img src="images/uploads/who_compendium.jpg" alt="who compendium" loading="lazy" class="mb-lg-0 ">
+                                        </picture></a>
+                                </div>
+                            </article>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-1.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-2.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-3.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-4.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-5.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-6.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-1.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                            <div class="pd-logo-strip-2-card-sm">
+                                <img src="images/uploads/logo-testimonial-example-2.svg" alt="example logo" width="180" height="180" loading="lazy">
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex flex-row flex-wrap justify-content-start pt-4"><a href="#" class="pd-btn pd-btn-light"><span class="pd-icon"><img src="images/design-assets/flag_24dp_C5247F_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span><span class="pd-icon pd-icon-rollover"><img src="images/design-assets/flag_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span>Get Started</a><a href="#" class="pd-btn pd-btn-light"><span class="pd-icon"><img src="images/design-assets/sell_24dp_C5247F_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span><span class="pd-icon pd-icon-rollover"><img src="images/design-assets/sell_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="search icon" width="40" height="40" loading="lazy"></span>Buy a Microscope</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-logo-strip-3</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
