Added in gradient class

--- a/index.html
+++ b/index.html
@@ -239,9 +239,11 @@
                 </div>
             </div>
         </header>
-        <div class="container">
-            <div style="height: 700px;"></div>
-        </div>
+        <section>
+            <div class="container">
+                <div style="height: 700px;" class="pd-gradient"></div>
+            </div>
+        </section>
         <footer class="pb-4 pd-footer-3 pt-5 text-white">
             <div class="container">
                 <div class="pb-4 row">
