--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <footer class="mt-4 text-lg-end text-start">
                             <a href="#" name="anchor" class="pd-btn pd-inverted"><span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
                                         <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
-                                    </svg></span>View Case Studies</a>
+                                    </svg></span>View All</a>
                         </footer>                         
                     </div>
                 </div>
