Added in new services section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                                                 <path d="m280-620.38 72.69-72.31L280-765l-72.31 72.31L280-620.38Zm200-24.23ZM172.31-404.62q-30.31 0-51.31-21-21-21-21-51.3v-335.39q0-30.3 21-51.3 21-21 51.31-21h615.38q30.31 0 51.31 21 21 21 21 51.3v335.39q0 30.3-21 51.3-21 21-51.31 21H661.77q3.92-15 5.23-29.99 1.31-15 .08-30h120.61q4.62 0 8.46-3.85 3.85-3.85 3.85-8.46v-335.39q0-4.61-3.85-8.46-3.84-3.84-8.46-3.84H172.31q-4.62 0-8.46 3.84-3.85 3.85-3.85 8.46v335.39q0 4.61 3.85 8.46 3.84 3.85 8.46 3.85h120.61q-1.23 15 .08 30 1.31 14.99 5.23 29.99H172.31Zm487.64-269.99q20.82 0 35.43-14.57Q710-703.75 710-724.57q0-20.81-14.57-35.43-14.57-14.61-35.38-14.61-20.82 0-35.43 14.57Q610-745.47 610-724.66q0 20.81 14.57 35.43 14.57 14.62 35.38 14.62ZM220-75.39v-70.15q0-29.23 16.23-54.42t43.23-37.5q47.46-21.85 97.96-32.96 50.5-11.12 102.58-11.12t102.58 11.12q50.5 11.11 97.96 32.96 27 12.31 43.23 37.41Q740-174.95 740-145.67v70.28H220Zm60-60h400v-10.15q0-12-7-22t-18-15q-42-19-86-29t-89-10q-45 0-89 10t-86 29q-11 5-18 15t-7 22v10.15Zm200-193.84q-49.92 0-84.96-35.04Q360-399.31 360-449.23q0-49.92 35.04-84.96 35.04-35.04 84.96-35.04 49.92 0 84.96 35.04Q600-499.15 600-449.23q0 49.92-35.04 84.96-35.04 35.04-84.96 35.04Zm0-60q25 0 42.5-17.5t17.5-42.5q0-25-17.5-42.5t-42.5-17.5q-25 0-42.5 17.5t-17.5 42.5q0 25 17.5 42.5t42.5 17.5Zm0-60Zm0 313.84Z"/>
                                                             </svg>
                                                         </div><div class="pd-mega-menu-sub-menu-label-outer">
-                                                            <strong>Virtual CTA</strong>
+                                                            <strong>Virtual CTO</strong>
                                                             <p>Lorem ipsum bit duam</p>
                                                         </div></a>
                                                 </div>
@@ -382,14 +382,94 @@
                 </div>
             </div>
         </section>
-        <section class="pd-grid-10">
+        <section class="pb-5 pd-grid-10">
             <div class="pd-logo-gradient-background"></div>
             <div class="pd-grid-10-spacer-white"></div>
-            <div class="container">
+            <div class="container position-relative pt-5">
                 <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <h3>Column title</h3> 
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                    <div class="col-12 col-lg-6 mb-4">
+                        <header>
+                            <h2 class="mb-4 pd-intro-heading-sm pd-inverted">Our Services</h2>
+                            <p class="pd-headline pd-inverted">Discover Our Services</p>
+                        </header>
+                        <div class="mb-4 pd-inverted pd-sub-headline">
+                            <p>Our team have over a decade of experience delivering digital solutions for brands and organisations across many sectors. Specialising in delivering bespoke platforms and custom digital tools to deliver transformative results for any client brief.</p>
+                        </div>
+                        <footer><a href="#" name="anchor" class="pd-btn pd-inverted"><span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                                        <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
+                                    </svg></span>Let's Talk</a>
+                        </footer>                         
+                    </div>
+                    <div class="col-12 col-md-6 mb-4"> 
+</div>
+                </div>
+                <div class="row">
+                    <div class="align-items-start col-12 col-md-6 d-flex flex-column justify-content-start mb-3">
+                        <article class="flex-grow-1 pd-grid-10-card-outer">
+                            <header>
+                                <h3 class="pd-card-headline pd-inverted">Strategic Consultancy</h3>
+                            </header>
+                            <div class="pd-card-body pd-inverted">
+                                <p>Donec accumsan fringilla purus sit amet semper. Praesent iaculis nibh tortor, rhoncus efficitur ipsum viverra ut.</p>
+                            </div>
+                            <footer class="align-items-start d-flex flex-column justify-content-start">
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Artificial Intelligence</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Systems Architecture</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Reporting and Analytics</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Development Consultancy</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Virtual CTO</a>
+                            </footer>
+                        </article>                         
+                    </div>
+                    <div class="align-items-start col-12 col-md-6 d-flex flex-column justify-content-start mb-3">
+                        <article class="flex-grow-1 pd-grid-10-card-outer">
+                            <header>
+                                <h3 class="pd-card-headline pd-inverted">Software Development</h3>
+                            </header>
+                            <div class="pd-card-body pd-inverted">
+                                <p>Quisque elit ex, tincidunt nec cursus a, malesuada vitae orci.</p>
+                            </div>
+                            <footer class="align-items-start d-flex flex-column justify-content-start">
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Web App Development</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Customer Portals</a><a href="#" name="anchor" class="pd-card-link pd-inverted">Operational Systems (CRM + ERP)</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Product Development</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Outsourced Development Resources</a>
+                            </footer>
+                        </article>                         
+                    </div>
+                    <div class="align-items-start col-12 col-md-6 d-flex flex-column justify-content-start mb-3">
+                        <article class="flex-grow-1 pd-grid-10-card-outer">
+                            <header>
+                                <h3 class="pd-card-headline pd-inverted">Support And Hosting</h3>
+                            </header>
+                            <div class="pd-card-body pd-inverted">
+                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                            <footer class="align-items-start d-flex flex-column justify-content-start">
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">System Support</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Hosting</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">API and Third Party Integrations</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Cloud Infrastructure and Devops</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Product Modernisation</a>
+                            </footer>
+                        </article>                         
+                    </div>
+                    <div class="align-items-start col-12 col-md-6 d-flex flex-column justify-content-start mb-3">
+                        <article class="flex-grow-1 pd-grid-10-card-outer">
+                            <header>
+                                <h3 class="pd-card-headline pd-inverted">Business Analysis</h3>
+                            </header>
+                            <div class="pd-card-body pd-inverted">
+                                <p>Nulla vitae turpis porttitor, blandit orci in, vehicula libero.&nbsp;</p>
+                            </div>
+                            <footer class="align-items-start d-flex flex-column justify-content-start">
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Project Scoping</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Discovery Workshops</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Specification Development</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">UI and UX Design</a>
+                                <a href="#" name="anchor" class="pd-card-link pd-inverted">Ideation and Feasibility</a>
+                            </footer>
+                        </article>                         
                     </div>
                 </div>
             </div>
@@ -451,8 +531,7 @@
                     </div>
                     <div class="col-lg-4 pb-4 text-center text-lg-start">
                         <h3>Trusted</h3>
-                        <div class="pt-2">
-                            <a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pb-2 pd-review-card"><img src="images/design-assets/icon-google.svg" alt="Google Icon White" width="74" height="24" loading="lazy"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
+                        <div class="pt-2"><a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pb-2 pd-review-card"><img src="images/design-assets/icon-google.svg" alt="Google Icon White" width="74" height="24" loading="lazy"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
                                     <div class="">
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
@@ -460,8 +539,7 @@
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
                                     </div>
-                                </div></a>
-                            <a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pd-review-card"><img alt="Clutch Icon White" width="74" loading="lazy" src="images/design-assets/icon-clutch.svg" height="22"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
+                                </div></a><a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pd-review-card"><img alt="Clutch Icon White" width="74" loading="lazy" src="images/design-assets/icon-clutch.svg" height="22"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
                                     <div class="">
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
                                         <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
