--- a/index.html
+++ b/index.html
@@ -494,7 +494,76 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="pd-block-primary">
+                            <div class="row">
+                                <div class="align-items-center col-12 col-lg-6 d-flex flex-row justify-content-center mb-4 mb-lg-0">
+                                    <div class="pd-left pd-special-img-outer-2">
+                                        <picture>
+                                            <source srcset="/images/uploads/_vivato/hero-edge-1-outer_result.webp" type="image/webp">
+                                            <img src="images/uploads/_vivato/hero-edge-1-outer.jpg" class="pd-img-cover" alt="people at work" width="30" height="240" loading="lazy">
+                                        </picture>
+                                    </div>
+                                    <div class="pd-left pd-special-img-outer-1">
+                                        <picture>
+                                            <source srcset="/images/uploads/_vivato/hero-edge-1_result.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/hero-edge-1.jpg" class="pd-img-cover" width="40" height="320" loading="lazy" alt="laptop with code">
+                                        </picture>
+                                    </div>
+                                    <div class="pd-special-img-outer">
+                                        <picture>
+                                            <source srcset="/images/uploads/_vivato/hero-new-design-windows_result.webp">
+                                            <img src="images/uploads/_vivato/hero-new-design-windows.jpg" class="pd-img-cover" width="300" height="400" loading="lazy" alt="developer at work">
+                                        </picture>
+                                        <a href="#" data-video-id="gHCYm7P9pYM" class="pd-special-img-play-icon pd-watch-youtube-video"> <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
+                                                <path d="M390-318.46 641.54-480 390-641.54v323.08ZM480.07-100q-78.84 0-148.21-29.92t-120.68-81.21q-51.31-51.29-81.25-120.63Q100-401.1 100-479.93q0-78.84 29.92-148.21t81.21-120.68q51.29-51.31 120.63-81.25Q401.1-860 479.93-860q78.84 0 148.21 29.92t120.68 81.21q51.31 51.29 81.25 120.63Q860-558.9 860-480.07q0 78.84-29.92 148.21t-81.21 120.68q-51.29 51.31-120.63 81.25Q558.9-100 480.07-100Zm-.07-60q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/>
+                                            </svg></a>
+                                    </div>                                     
+                                </div>
+                                <div class="col-12 col-lg-6 ">
+                                    <div class="pd-number-svg-lg">
+                                        <svg width="100%" height="100%" viewBox="0 0 232 105" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                                            <g transform="matrix(1,0,0,1,-29.1469,-200.114)">
+                                                <path class="svg-fill" d="M63.995,304.37C57.563,304.37 51.731,303.194 46.499,300.842C41.267,298.49 37.115,294.962 34.043,290.258C30.971,285.554 29.339,279.698 29.147,272.69L41.387,272.69C41.483,276.53 42.419,280.058 44.195,283.274C45.971,286.49 48.539,289.058 51.899,290.978C55.259,292.898 59.291,293.858 63.995,293.858C68.699,293.858 72.635,292.946 75.803,291.122C78.971,289.298 81.371,286.874 83.003,283.85C84.635,280.826 85.451,277.442 85.451,273.698C85.451,268.994 84.323,265.178 82.067,262.25C79.811,259.322 76.787,257.138 72.995,255.698C69.203,254.258 65.051,253.538 60.539,253.538L53.051,253.538L53.051,243.314L60.539,243.314C67.163,243.314 72.347,241.802 76.091,238.778C79.835,235.754 81.707,231.554 81.707,226.178C81.707,221.762 80.243,218.066 77.315,215.09C74.387,212.114 69.947,210.626 63.995,210.626C58.331,210.626 53.819,212.258 50.459,215.522C47.099,218.786 45.179,222.962 44.699,228.05L32.459,228.05C32.747,222.578 34.235,217.73 36.923,213.506C39.611,209.282 43.259,205.994 47.867,203.642C52.475,201.29 57.899,200.114 64.139,200.114C70.667,200.114 76.139,201.266 80.555,203.57C84.971,205.874 88.307,208.946 90.563,212.786C92.819,216.626 93.947,220.85 93.947,225.458C93.947,228.818 93.323,232.034 92.075,235.106C90.827,238.178 88.955,240.866 86.459,243.17C83.963,245.474 80.795,247.058 76.955,247.922C80.891,248.786 84.419,250.322 87.539,252.53C90.659,254.738 93.131,257.618 94.955,261.17C96.779,264.722 97.691,268.898 97.691,273.698C97.691,279.17 96.419,284.234 93.875,288.89C91.331,293.546 87.563,297.29 82.571,300.122C77.579,302.954 71.387,304.37 63.995,304.37Z" style="fill-rule:nonzero;"/>
+                                            </g>
+                                            <g transform="matrix(1,0,0,1,-29.1469,-200.114)">
+                                                <path class="svg-fill" d="M163.355,302.642L163.355,281.042L112.235,281.042L112.235,271.682L161.195,201.842L175.307,201.842L175.307,270.386L190.283,270.386L190.283,281.042L175.307,281.042L175.307,302.642L163.355,302.642ZM125.627,270.386L163.931,270.386L163.931,215.234L125.627,270.386Z" style="fill-rule:nonzero;"/>
+                                            </g>
+                                            <g transform="matrix(1.65714,0,0,1.65714,-136.92,2.46604)">
+                                                <path class="svg-fill" d="M193.65,60.096L213.186,26.496L217.218,26.496L197.682,60.096L193.65,60.096ZM214.818,60.672C213.378,60.672 212.082,60.344 210.93,59.688C209.778,59.032 208.858,58.096 208.17,56.88C207.482,55.664 207.138,54.24 207.138,52.608C207.138,50.944 207.482,49.512 208.17,48.312C208.858,47.112 209.778,46.184 210.93,45.528C212.082,44.872 213.378,44.544 214.818,44.544C216.29,44.544 217.594,44.872 218.73,45.528C219.866,46.184 220.77,47.112 221.442,48.312C222.114,49.512 222.45,50.944 222.45,52.608C222.45,54.24 222.114,55.664 221.442,56.88C220.77,58.096 219.858,59.032 218.706,59.688C217.554,60.344 216.258,60.672 214.818,60.672ZM214.77,57.552C215.538,57.552 216.242,57.368 216.882,57C217.522,56.632 218.042,56.08 218.442,55.344C218.842,54.608 219.042,53.696 219.042,52.608C219.042,51.488 218.85,50.56 218.466,49.824C218.082,49.088 217.57,48.536 216.93,48.168C216.29,47.8 215.586,47.616 214.818,47.616C214.082,47.616 213.386,47.8 212.73,48.168C212.074,48.536 211.546,49.088 211.146,49.824C210.746,50.56 210.546,51.488 210.546,52.608C210.546,53.696 210.746,54.608 211.146,55.344C211.546,56.08 212.066,56.632 212.706,57C213.346,57.368 214.034,57.552 214.77,57.552ZM196.338,42.096C194.898,42.096 193.602,41.768 192.45,41.112C191.298,40.456 190.378,39.52 189.69,38.304C189.002,37.088 188.658,35.664 188.658,34.032C188.658,32.368 189.002,30.936 189.69,29.736C190.378,28.536 191.306,27.608 192.474,26.952C193.642,26.296 194.946,25.968 196.386,25.968C197.826,25.968 199.122,26.296 200.274,26.952C201.426,27.608 202.338,28.536 203.01,29.736C203.682,30.936 204.018,32.368 204.018,34.032C204.018,35.664 203.682,37.088 203.01,38.304C202.338,39.52 201.418,40.456 200.25,41.112C199.082,41.768 197.778,42.096 196.338,42.096ZM196.338,38.976C197.106,38.976 197.81,38.792 198.45,38.424C199.09,38.056 199.602,37.504 199.986,36.768C200.37,36.032 200.562,35.12 200.562,34.032C200.562,32.912 200.37,31.976 199.986,31.224C199.602,30.472 199.09,29.912 198.45,29.544C197.81,29.176 197.122,28.992 196.386,28.992C195.65,28.992 194.946,29.176 194.274,29.544C193.602,29.912 193.066,30.472 192.666,31.224C192.266,31.976 192.066,32.912 192.066,34.032C192.066,35.12 192.266,36.032 192.666,36.768C193.066,37.504 193.594,38.056 194.25,38.424C194.906,38.792 195.602,38.976 196.338,38.976Z" style="fill-rule:nonzero;"/>
+                                            </g>
+                                        </svg>
+                                    </div>
+                                    <div class="position-relative">
+                                        <header>
+                                            <h2 class="mb-4 pd-intro-heading-sm pd-inverted">Featured Solution</h2>
+                                            <div class="mb-4 pd-headline pd-inverted">
+                                                <p>New Design Windows</p>
+                                            </div>
+                                        </header>
+                                        <div class="pd-inverted pd-sub-headline">
+                                            <p>Complete sales and order fulfilment system driving a 34% increase in sales.</p>
+                                        </div>
+                                        <div class="mb-4">
+                                            <p class="pd-card-bullet pd-inverted">CRM Systems</p>
+                                            <p class="pd-card-bullet pd-inverted">Custom Software Solutions</p>
+                                        </div>
+                                        <footer>
+                                            <a href="#" name="anchor" class="pd-btn pd-inverted"><span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                                                        <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
+                                                    </svg></span>Read Case Study</a>
+                                        </footer>
+                                    </div>                                     
+                                </div>
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="pb-4 pd-footer-3 pt-5 text-white">
             <div class="container">
                 <div class="pb-4 row">
