Added in new padding for hero and fixed aria-label missing

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </header>
-        <section class="pb-5 pd-hero-18 pt-5">
+        <section class="pb-5 pd-hero-18 pt-4 pt-lg-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-7">
@@ -275,7 +275,7 @@
                                 <picture>
                                     <source srcset="/images/uploads/_vivato/hero-dev-1_result.webp" type="image/webp">
                                     <img src="images/uploads/_vivato/hero-dev-1.jpg" class="pd-img-cover" width="300" height="400" loading="lazy" alt="developer at work">
-                                </picture><a href="#" data-video-id="gHCYm7P9pYM" class="pd-hero-18-play-icon pd-watch-youtube-video"> <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
+                                </picture><a href="#" data-video-id="gHCYm7P9pYM" class="pd-hero-18-play-icon pd-watch-youtube-video" aria-label="play video"> <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
                                         <path d="M390-318.46 641.54-480 390-641.54v323.08ZM480.07-100q-78.84 0-148.21-29.92t-120.68-81.21q-51.31-51.29-81.25-120.63Q100-401.1 100-479.93q0-78.84 29.92-148.21t81.21-120.68q51.29-51.31 120.63-81.25Q401.1-860 479.93-860q78.84 0 148.21 29.92t120.68 81.21q51.31 51.29 81.25 120.63Q860-558.9 860-480.07q0 78.84-29.92 148.21t-81.21 120.68q-51.29 51.31-120.63 81.25Q558.9-100 480.07-100Zm-.07-60q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/>
                                     </svg></a>
                             </div>
