--- a/insight-archive.html
+++ b/insight-archive.html
@@ -234,8 +234,155 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-8"> 
-</div>
+                    <div class="col-12 col-lg-8">
+                        <div class="row">
+                            <div class="col-12 col-md-6 d-flex mb-4">
+                                <article class="pd-slider-1-card-outer"><a href="#" class="pd-slider-1-img-outer"> <picture>
+                                            <source srcset="/images/uploads/_vivato/insights-article-1_result_mob.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/insights-article-1.jpg" alt="image of a network" width="297" height="260" loading="lazy">
+                                        </picture> </a>
+                                    <div class="pd-slider-1-text-content-outer">
+                                        <header class="mb-2">
+                                            <div class="mb-2"><a href="#" class="pd-category-link">Technology Trends</a>
+                                            </div>
+                                            <div>
+                                                <p>12 July 2025</p>
+                                            </div>
+                                            <a href="#" name="anchor"><h3>Making You Business Tools Work Together: The Simple Advantage</h3></a>
+                                        </header>
+                                        <div class="align-items-start d-flex flex-row justify-content-start mb-2 pd-slider-1-card-tags-outer">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF" class="me-2">
+                                                    <path d="M443.02-100q-13.56 0-27.18-5.42-13.63-5.43-24.53-16.27L121.08-391.92q-11-10.96-16.04-24.21-5.04-13.24-5.04-26.94 0-13.7 5.04-27.33 5.04-13.62 16.04-24.52l342.77-343.39q9.96-9.94 23.54-15.81 13.58-5.88 28.07-5.88h271.23q30.31 0 51.5 21.35 21.19 21.36 21.19 51.34v271.23q0 14.64-5.42 27.9-5.42 13.26-15.65 23.1L494.54-121.69q-10.85 10.84-24.41 16.27-13.55 5.42-27.11 5.42Zm-8.94-63.85q3.84 3.85 9.04 3.85 5.19 0 9.03-3.85l343.77-344q1.93-1.92 2.7-4.23.76-2.3.76-4.61v-270.62q0-5.38-3.65-8.84-3.65-3.47-9.04-3.47H511.08L163.85-452.15q-3.85 3.84-3.85 9.03 0 5.2 3.85 9.04l270.23 270.23Zm264.15-485q20.99 0 35.69-14.58 14.69-14.58 14.69-35.42 0-20.99-14.64-35.68-14.65-14.7-35.58-14.7t-35.54 14.65q-14.62 14.65-14.62 35.58 0 20.92 14.58 35.54 14.59 14.61 35.42 14.61ZM479.62-479.23Z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="align-items-start d-flex flex-row flex-wrap justify-content-start">
+                                                <a href="#" name="anchor">CRM</a>
+                                                <a href="#" name="anchor">ERP</a>
+                                                <a href="#" name="anchor">Agile</a>
+                                                <a href="#" name="anchor">AI</a>
+                                            </div>
+                                        </div>
+                                        <footer class="mt-auto">
+                                            <a target="_blank" href="#" name="anchor" class="pd-card-link">View</a>
+                                        </footer>
+                                    </div>
+                                </article>                                 
+                            </div>
+                            <div class="col-12 col-md-6 d-flex mb-4">
+                                <article class="pd-slider-1-card-outer"><a href="#" class="pd-slider-1-img-outer"> <picture>
+                                            <source srcset="/images/uploads/_vivato/insights-article-2_result_mob.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/insights-article-2.jpg" alt="image of a roman emperor" width="297" height="260" loading="lazy">
+                                        </picture> </a>
+                                    <div class="pd-slider-1-text-content-outer">
+                                        <header class="mb-2">
+                                            <div class="mb-2">
+                                                <a href="#" class="pd-category-link">Cloud &amp; INfrastructure</a>
+                                            </div>
+                                            <div>
+                                                <p>20 June 2025</p>
+                                            </div><a href="#" name="anchor"><h3>Still thinking about the Roman Empire? Here's how business owners can embrace technology like an Emperor.</h3></a>
+                                        </header>
+                                        <div class="align-items-start d-flex flex-row justify-content-start mb-2 pd-slider-1-card-tags-outer">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF" class="me-2">
+                                                    <path d="M443.02-100q-13.56 0-27.18-5.42-13.63-5.43-24.53-16.27L121.08-391.92q-11-10.96-16.04-24.21-5.04-13.24-5.04-26.94 0-13.7 5.04-27.33 5.04-13.62 16.04-24.52l342.77-343.39q9.96-9.94 23.54-15.81 13.58-5.88 28.07-5.88h271.23q30.31 0 51.5 21.35 21.19 21.36 21.19 51.34v271.23q0 14.64-5.42 27.9-5.42 13.26-15.65 23.1L494.54-121.69q-10.85 10.84-24.41 16.27-13.55 5.42-27.11 5.42Zm-8.94-63.85q3.84 3.85 9.04 3.85 5.19 0 9.03-3.85l343.77-344q1.93-1.92 2.7-4.23.76-2.3.76-4.61v-270.62q0-5.38-3.65-8.84-3.65-3.47-9.04-3.47H511.08L163.85-452.15q-3.85 3.84-3.85 9.03 0 5.2 3.85 9.04l270.23 270.23Zm264.15-485q20.99 0 35.69-14.58 14.69-14.58 14.69-35.42 0-20.99-14.64-35.68-14.65-14.7-35.58-14.7t-35.54 14.65q-14.62 14.65-14.62 35.58 0 20.92 14.58 35.54 14.59 14.61 35.42 14.61ZM479.62-479.23Z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="align-items-start d-flex flex-row flex-wrap justify-content-start"><a href="#" name="anchor">CRM</a><a href="#" name="anchor">Agile</a>
+                                            </div>
+                                        </div>
+                                        <footer class="mt-auto"><a target="_blank" href="#" name="anchor" class="pd-card-link">View</a>
+                                        </footer>
+                                    </div>
+                                </article>                                 
+                            </div>
+                            <div class="col-12 col-md-6 d-flex mb-4">
+                                <article class="pd-slider-1-card-outer"><a href="#" class="pd-slider-1-img-outer"> <picture>
+                                            <source srcset="/images/uploads/_vivato/insights-article-3_result_mob.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/insights-article-3.jpg" alt="image of a hoodie" width="297" height="260" loading="lazy">
+                                        </picture> </a>
+                                    <div class="pd-slider-1-text-content-outer">
+                                        <header class="mb-2">
+                                            <div class="mb-2">
+                                                <a href="#" class="pd-category-link">Technology Trends</a>
+                                            </div>
+                                            <div>
+                                                <p>10 May 2025</p>
+                                            </div><a href="#" name="anchor"><h3>The Cloud-Hosted ERP Systems Revolution: Enhancing Hybrid Working Models for Modern Businesses</h3></a>
+                                        </header>
+                                        <div class="align-items-start d-flex flex-row justify-content-start mb-2 pd-slider-1-card-tags-outer">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF" class="me-2">
+                                                    <path d="M443.02-100q-13.56 0-27.18-5.42-13.63-5.43-24.53-16.27L121.08-391.92q-11-10.96-16.04-24.21-5.04-13.24-5.04-26.94 0-13.7 5.04-27.33 5.04-13.62 16.04-24.52l342.77-343.39q9.96-9.94 23.54-15.81 13.58-5.88 28.07-5.88h271.23q30.31 0 51.5 21.35 21.19 21.36 21.19 51.34v271.23q0 14.64-5.42 27.9-5.42 13.26-15.65 23.1L494.54-121.69q-10.85 10.84-24.41 16.27-13.55 5.42-27.11 5.42Zm-8.94-63.85q3.84 3.85 9.04 3.85 5.19 0 9.03-3.85l343.77-344q1.93-1.92 2.7-4.23.76-2.3.76-4.61v-270.62q0-5.38-3.65-8.84-3.65-3.47-9.04-3.47H511.08L163.85-452.15q-3.85 3.84-3.85 9.03 0 5.2 3.85 9.04l270.23 270.23Zm264.15-485q20.99 0 35.69-14.58 14.69-14.58 14.69-35.42 0-20.99-14.64-35.68-14.65-14.7-35.58-14.7t-35.54 14.65q-14.62 14.65-14.62 35.58 0 20.92 14.58 35.54 14.59 14.61 35.42 14.61ZM479.62-479.23Z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="align-items-start d-flex flex-row flex-wrap justify-content-start"><a href="#" name="anchor">Agile</a><a href="#" name="anchor">AI</a>
+                                            </div>
+                                        </div>
+                                        <footer class="mt-auto"><a target="_blank" href="#" name="anchor" class="pd-card-link">View</a>
+                                        </footer>
+                                    </div>
+                                </article>                                                                  
+                            </div>
+                            <div class="col-12 col-md-6 d-flex mb-4">
+                                <article class="pd-slider-1-card-outer"><a href="#" class="pd-slider-1-img-outer"> <picture>
+                                            <source srcset="/images/uploads/_vivato/insights-article-4_result_mob.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/insights-article-4.jpg" alt="image of a hoodie" width="297" height="260" loading="lazy">
+                                        </picture> </a>
+                                    <div class="pd-slider-1-text-content-outer">
+                                        <header class="mb-2">
+                                            <div class="mb-2">
+                                                <a href="#" class="pd-category-link">Software Development</a>
+                                            </div>
+                                            <div>
+                                                <p>16 April 2025</p>
+                                            </div><a href="#" name="anchor"><h3>Paper-based horror stories</h3></a>
+                                        </header>
+                                        <div class="align-items-start d-flex flex-row justify-content-start mb-2 pd-slider-1-card-tags-outer">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF" class="me-2">
+                                                    <path d="M443.02-100q-13.56 0-27.18-5.42-13.63-5.43-24.53-16.27L121.08-391.92q-11-10.96-16.04-24.21-5.04-13.24-5.04-26.94 0-13.7 5.04-27.33 5.04-13.62 16.04-24.52l342.77-343.39q9.96-9.94 23.54-15.81 13.58-5.88 28.07-5.88h271.23q30.31 0 51.5 21.35 21.19 21.36 21.19 51.34v271.23q0 14.64-5.42 27.9-5.42 13.26-15.65 23.1L494.54-121.69q-10.85 10.84-24.41 16.27-13.55 5.42-27.11 5.42Zm-8.94-63.85q3.84 3.85 9.04 3.85 5.19 0 9.03-3.85l343.77-344q1.93-1.92 2.7-4.23.76-2.3.76-4.61v-270.62q0-5.38-3.65-8.84-3.65-3.47-9.04-3.47H511.08L163.85-452.15q-3.85 3.84-3.85 9.03 0 5.2 3.85 9.04l270.23 270.23Zm264.15-485q20.99 0 35.69-14.58 14.69-14.58 14.69-35.42 0-20.99-14.64-35.68-14.65-14.7-35.58-14.7t-35.54 14.65q-14.62 14.65-14.62 35.58 0 20.92 14.58 35.54 14.59 14.61 35.42 14.61ZM479.62-479.23Z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="align-items-start d-flex flex-row flex-wrap justify-content-start"><a href="#" name="anchor">CRM</a><a href="#" name="anchor">ERP</a><a href="#" name="anchor">AI</a>
+                                            </div>
+                                        </div>
+                                        <footer class="mt-auto"><a target="_blank" href="#" name="anchor" class="pd-card-link">View</a>
+                                        </footer>
+                                    </div>
+                                </article>                                                                  
+                            </div>
+                            <div class="col-12 col-md-6 d-flex mb-4">
+                                <article class="pd-slider-1-card-outer"><a href="#" class="pd-slider-1-img-outer"> <picture>
+                                            <source srcset="/images/uploads/_vivato/insights-article-5_result_mob.webp" type="image/webp">
+                                            <img src="/images/uploads/_vivato/insights-article-5.jpg" width="297" height="260" loading="lazy" alt="Image of a badge">
+                                        </picture> </a>
+                                    <div class="pd-slider-1-text-content-outer">
+                                        <header class="mb-2">
+                                            <div class="mb-2">
+                                                <a href="#" class="pd-category-link">Digital Transformation</a>
+                                            </div>
+                                            <div>
+                                                <p>12 March 2025</p>
+                                            </div><a href="#" name="anchor"><h3>The Answer to Uninterrupted Holidays for Small Business Owners</h3></a>
+                                        </header>
+                                        <div class="align-items-start d-flex flex-row justify-content-start mb-2 pd-slider-1-card-tags-outer">
+                                            <div>
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF" class="me-2">
+                                                    <path d="M443.02-100q-13.56 0-27.18-5.42-13.63-5.43-24.53-16.27L121.08-391.92q-11-10.96-16.04-24.21-5.04-13.24-5.04-26.94 0-13.7 5.04-27.33 5.04-13.62 16.04-24.52l342.77-343.39q9.96-9.94 23.54-15.81 13.58-5.88 28.07-5.88h271.23q30.31 0 51.5 21.35 21.19 21.36 21.19 51.34v271.23q0 14.64-5.42 27.9-5.42 13.26-15.65 23.1L494.54-121.69q-10.85 10.84-24.41 16.27-13.55 5.42-27.11 5.42Zm-8.94-63.85q3.84 3.85 9.04 3.85 5.19 0 9.03-3.85l343.77-344q1.93-1.92 2.7-4.23.76-2.3.76-4.61v-270.62q0-5.38-3.65-8.84-3.65-3.47-9.04-3.47H511.08L163.85-452.15q-3.85 3.84-3.85 9.03 0 5.2 3.85 9.04l270.23 270.23Zm264.15-485q20.99 0 35.69-14.58 14.69-14.58 14.69-35.42 0-20.99-14.64-35.68-14.65-14.7-35.58-14.7t-35.54 14.65q-14.62 14.65-14.62 35.58 0 20.92 14.58 35.54 14.59 14.61 35.42 14.61ZM479.62-479.23Z"/>
+                                                </svg>
+                                            </div>
+                                            <div class="align-items-start d-flex flex-row flex-wrap justify-content-start"><a href="#" name="anchor">CRM</a><a href="#" name="anchor">ERP</a>
+                                            </div>
+                                        </div>
+                                        <footer class="mt-auto"><a target="_blank" href="#" name="anchor" class="pd-card-link">View</a>
+                                        </footer>
+                                    </div>
+                                </article>                                                                  
+                            </div>
+                        </div>                         
+                    </div>
                     <aside class="col-12 col-lg-4">
                         <div class="mb-4 pd-cards-posts-7-category-outer">
                             <header>
@@ -244,7 +391,7 @@
                             <nav class="">
                                 <ul>
                                     <li>
-                                        <a href="#" name="anchor">Business Technology Trends</a>
+                                        <a href="#" name="anchor">Technology Trends</a>
                                     </li>
                                     <li>
                                         <a href="#" name="anchor">Cloud &amp; Infrastructure</a>
@@ -277,7 +424,7 @@
                                 <a href="#" name="anchor">Testing & QA</a>
                                 <a href="#" name="anchor">UX Design</a>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </aside>
                 </div>
                 <div class="pb-4 pt-4 row">
