--- a/insight.html
+++ b/insight.html
@@ -233,7 +233,7 @@
                                                 <p class="pd-blog-label">Oct 24, 2025</p><a href="#" name="anchor" class="pd-blog-label">Share<span class="ms-2"><img src="images/design-assets/icon-linkedin.svg" alt="linkedin icon" width="24" height="24"></span></a>
                                             </div>
                                         </div>
-                                        <div class="align-items-center d-flex flex-row justify-content-start mb-4">
+                                        <div class="align-items-center d-flex flex-row justify-content-start mb-2">
                                             <a href="#" class="me-3 pd-intro-heading-sm pd-inverted">Process Automation</a>
                                         </div>
                                         <div class="mb-4">
@@ -271,6 +271,14 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="pd-blog-post-3-content-outer pd-text-1">
+                                <div class="mb-4 pd-blog-post-3-links-outer">
+                                    <div class="align-items-center d-flex flex-row flex-wrap justify-content-start"><a href="#" name="anchor" class="me-3 pd-card-link pd-watch-youtube-video" data-video-id="gHCYm7P9pYM">Watch Video</a><a href="#" name="anchor" class="pd-card-link pd-transcription-link">Video Transcription</a>
+                                    </div>
+                                    <div class="pd-blog-post-3-transcription pt-2" aria-expanded="true">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultricies venenatis pharetra. Nunc laoreet mauris quam, convallis sagittis diam pharetra non. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras suscipit semper lacus at condimentum. Cras rutrum venenatis ultrices. Nullam ut ullamcorper eros. Mauris varius tellus sit amet efficitur ornare. Aenean egestas dolor a imperdiet lacinia. Morbi sed libero sed mi tristique facilisis. Nam purus eros, finibus et pharetra at, varius vel dolor. Cras sodales purus vel metus consectetur viverra. Aliquam congue tortor non neque sollicitudin interdum. Duis sollicitudin commodo lacinia.</p>
+                                        <p>Sed tristique porta ligula, eget bibendum <a href="#">euismod congue</a> odio molestie eu. In urna nibh, mollis a orci non, euismod congue felis. Morbi in ligula non nulla pharetra venenatis vel ac metus. Aliquam erat volutpat.</p>
+                                    </div>
+                                </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultricies venenatis pharetra. Nunc laoreet mauris quam, convallis sagittis diam pharetra non. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras suscipit semper lacus at condimentum. Cras rutrum venenatis ultrices. Nullam ut ullamcorper eros. Mauris varius tellus sit amet efficitur ornare. Aenean egestas dolor a imperdiet lacinia. Morbi sed libero sed mi tristique facilisis. Nam purus eros, finibus et pharetra at, varius vel dolor. Cras sodales purus vel metus consectetur viverra. Aliquam congue tortor non neque sollicitudin interdum. Duis sollicitudin commodo lacinia.</p>
                                 <p>Sed tristique porta ligula, eget bibendum <a href="#">euismod congue</a> odio molestie eu. In urna nibh, mollis a orci non, euismod congue felis. Morbi in ligula non nulla pharetra venenatis vel ac metus. Aliquam erat volutpat.</p>
                                 <h2>Heading 2</h2>
@@ -694,5 +702,6 @@
         <script src="assets/js-vivato/glide.min.js"></script>
         <script src="assets/js-vivato/functions-sliders.js"></script>
         <script src="assets/js-vivato/functions-modals-video.js"></script>
+        <script src="assets/js-vivato/functions-video-transcription.js"></script>
     </body>
 </html>
