--- a/service-primary.html
+++ b/service-primary.html
@@ -7,7 +7,7 @@
         <link rel="preload" href="/fonts/DMSans-Regular-subset.woff2" as="font" type="font/woff2" crossorigin>
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Home</title>
+        <title>Service Landing</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
