Added in amends for standard page

--- a/standard.html
+++ b/standard.html
@@ -369,10 +369,10 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pd-text-1 pt-5">
+        <section class="pb-5 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12"> 
+                    <div class="col-12 pd-text-1"> 
                         <h1>Heading 1</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultricies venenatis pharetra. Nunc laoreet mauris quam, convallis sagittis diam pharetra non. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras suscipit semper lacus at condimentum. Cras rutrum venenatis ultrices. Nullam ut ullamcorper eros. Mauris varius tellus sit amet efficitur ornare. Aenean egestas dolor a imperdiet lacinia. Morbi sed libero sed mi tristique facilisis. Nam purus eros, finibus et pharetra at, varius vel dolor. Cras sodales purus vel metus consectetur viverra. Aliquam congue tortor non neque sollicitudin interdum. Duis sollicitudin commodo lacinia.</p>
                         <p>Sed tristique porta ligula, eget bibendum <a href="#">euismod congue</a> odio molestie eu. In urna nibh, mollis a orci non, euismod congue felis. Morbi in ligula non nulla pharetra venenatis vel ac metus. Aliquam erat volutpat.</p>
